--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,48 @@ input {
   outline: none;
 }
 
+.left {
+  width: 80%;
+}
+
+.const-tasks {
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 20%;
+  height: 100%;
+  padding: 20px;
+  border-left: 1px solid rgb(136, 136, 136);
+  text-align: center;
+}
+
+.const-list {
+  width: 100%;
+  padding: 0;
+}
+
+.const-item {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  width: 80%;
+  height: 100%;
+  position: relative;
+  border-radius: 10px;
+  font-size: 22px;
+  font-weight: 900;
+  opacity: 0.8;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
+  margin: 0 auto;
+  margin-bottom: 20px;
+  text-align: left;
+}
+
+.const-item:hover {
+  cursor: pointer;
+  opacity: 1;
+}
+
 .add {
   width: 100%;
   height: 20%;
@@ -42,7 +84,7 @@ input {
 }
 
 .input-text {
-  width: 60%;
+  width: 90%;
   padding-left: 10px;
 }
 
@@ -64,25 +106,22 @@ input {
 .btn-add {
   background-image: url('../img/plus.svg');
 }
+.btn-add-const {
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  background-image: url('../img/plus.svg');
+  width: 50px;
+  height: 50px;
+}
 
 .btn-delete {
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
   background-image: url('../img/remove-symbol.svg');
   position: absolute;
   right: 3px;
   top: 3px
-}
-
-.btn-complete {
-  width: 30px;
-  height: 30px;
-  margin: 0 auto;
-  margin-top: 10px;
-  background-image: url('../img/correct-symbol.svg');
-  position: absolute;
-  right: 3px;
-  bottom: 3px
 }
 
 .todo {
@@ -95,14 +134,15 @@ input {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
+  margin: 0 auto;
 }
 
 .todo-item {
   display: flex;
   flex-direction: column;
-  margin: 0 10px;
+  margin: 0 12px;
   padding: 20px;
-  width: 16%;
+  width: 19%;
   height: 100%;
   margin-bottom: 20px;
   position: relative;
