--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ input {
 }
 
 .left {
-  width: 80%;
+  width: 76%;
 }
 
 .const-tasks {
@@ -64,13 +64,15 @@ input {
   opacity: 1;
 }
 
-.add-const{
+.add-const {
   width: 99%;
 }
-.title-const{
+
+.title-const {
   padding: 10px;
   width: 70%;
 }
+
 .add {
   width: 100%;
   height: 20%;
@@ -113,6 +115,7 @@ input {
 .btn-add {
   background-image: url('../img/plus.svg');
 }
+
 .btn-add-const {
   background-image: url('../img/plus.svg');
 }
@@ -127,7 +130,7 @@ input {
 }
 
 .todo {
-  width: 80%;
+  width: 99%;
   margin: 0 auto;
   padding-top: 50px;
 }
@@ -142,7 +145,7 @@ input {
 .todo-item {
   display: flex;
   flex-direction: column;
-  margin: 0 12px;
+  margin: 0 10px;
   padding: 20px;
   width: 19%;
   height: 100%;
@@ -177,6 +180,24 @@ input {
 }
 
 
+
+@media(max-width: 1440px) {
+  .todo {
+    padding-top: 5px;
+  }
+
+  .add-form {
+    padding-top: 15px;
+  }
+  .btn {
+    width: 25px;
+    height: 25px;
+  }
+  .btn-delete {
+    width: 20px;
+    height: 20px;
+  }
+}
 
 @media(max-width: 500px) {
   .todo {
