--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ input {
 }
 
 .left {
-  width: 76%;
+  width: 78%;
 }
 
 .const-tasks {
@@ -145,9 +145,9 @@ input {
 .todo-item {
   display: flex;
   flex-direction: column;
-  margin: 0 10px;
+  margin: 0 16px;
   padding: 20px;
-  width: 19%;
+  width: 20%;
   height: 100%;
   margin-bottom: 20px;
   position: relative;
@@ -185,7 +185,10 @@ input {
   .todo {
     padding-top: 5px;
   }
-
+  .todo-item {
+    margin: 0 10px;
+    width: 19%;
+  }
   .add-form {
     padding-top: 15px;
   }
